# openwallpaper

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Doxyfile  DoxygenLayout.xml  DoxygenLayout.xml.bak  custom.css  examples.md  header.html  index.md  interactivity.md  overview.md  textures.md  triangle.md  uniforms.md  wallpaperd.md  wpe-compile.md
examples/: .gitignore
examples/doom/: compile.sh  doomgeneric.patch  fragment.glsl  scene.c
examples/fullscreen-shader/: compile.sh  fragment.glsl  scene.c  vertex.glsl
examples/image/: compile.sh  scene.c  vertex.glsl
examples/rain/: compile.sh  fragment.glsl  scene.c  vertex.glsl
examples/triangle/: compile.sh  fragment.glsl  scene.c  vertex.glsl
examples/visualizer/: compile.sh  fragment.glsl  scene.c  vertex.glsl
include/: openwallpaper.h  openwallpaper_std140.h
owui/: .gitignore  CMakeLists.txt  org.openwallpaper.ui.desktop
owui/qml/: LibraryPage.qml  Main.qml  OptionsPage.qml  SelectedWallpaperPage.qml  WallpaperGrid.qml
owui/src/: display_list.cpp  display_list.h  main.cpp  options_manager.cpp  options_manager.h  preview_provider.cpp  preview_provider.h  runner.cpp  runner.h  runner_worker.cpp  runner_worker.h  toolchain_checker.cpp  toolchain_checker.h  wallpaper_list.cpp  wallpaper_list.h  wallpaper_list_item.cpp  wallpaper_list_item.h
src/: argparse.c  argparse.h  battery.c  error.c  error.h  main.c  object_manager.c  object_manager.h  output.c  output.h  quit.c  quit.h  scene.c  scene.h  state.c  state.h  wasm_api.c  wasm_api.h  window_output.c  window_output.h  wlroots_output.c  wlroots_output.h
wallpaperd/: CMakeLists.txt
wallpaperd/src/: argparse.c  argparse.h  audio_visualizer.c  audio_visualizer.h  battery.h  cache.c  cache.h  dynamic_api.c  dynamic_api.h  error.c  error.h  hyprland.c  hyprland.h  main.c  malloc.h  object_manager.c  object_manager.h  output.c  output.h  ready.c  ready.h  scene.c  scene.h  sds_alloc.h  state.c  state.h  video.c  video.h  wasm_api.c  wasm_api.h  window.c  window.h  wlroots.c  wlroots.h  wlroots_output.c  zip.c  zip.h
wpe-compile/: .gitignore  effect.go  go.mod  go.sum  image_object.go  main.go  material.go  mdl.go  metadata.go  parse_util.go  particle.go  particle_fragment.glsl  particle_vertex.glsl  pkg.go  scene.go  scene.tmpl  scene_utils.h  shader.go  sound_light.go  tex.go  zip.go
wpe-compile/module/: common.c  defs.h  image.c  main.c  openwallpaper.h  particle.c  particle_fragment.glsl  puppet.c  renderer.c  scene.tmpl  scene_data.c  scene_utils.h  transform.c  uniform.c
